--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Firebase Hosting
 on:
   push:
     branches:
-      - main  # Change if your branch is different
+      - main
 
 jobs:
   deploy:
@@ -12,10 +12,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build project
+        run: npm run build
+
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
       - name: Deploy to Firebase
-        env:
-          FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN }}
+        env: 
+          FIREBASE_TOKEN: ${{ 1//01rUawlTb9cCvCgYIARAAGAESNwF-L9IrN9_ZDbPMgviBJJ1fpLBxZr4Cxuni3kFyx3O8eg8YWvGzKp6BWLNmyB_HkoqA69ek-BI }}  # Pass secret to Firebase CLI
         run: firebase deploy --only hosting
