--- a/.github/workflows/deploy-cloudrun.yml
+++ b/.github/workflows/deploy-cloudrun.yml
@@ -21,6 +21,7 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean package -DskipTests
+        working-directory: pamtenproject-master  # 👈 Adjusted to where pom.xml is located
 
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v1
@@ -35,7 +36,8 @@ jobs:
 
       - name: Build Docker image and push to Artifact Registry
         run: |
-          gcloud builds submit --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/pamten-backend
+          gcloud builds submit --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/pamten-backend \
+            pamtenproject-master  # 👈 Submitting correct project directory
 
       - name: Deploy to Cloud Run
         run: |
