--- a/.github/workflows/deploy-cloudrun.yml
+++ b/.github/workflows/deploy-cloudrun.yml
@@ -19,10 +19,6 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Build with Maven
-        run: mvn clean package -DskipTests
-        working-directory: pamtenproject-master  # 👈 Adjusted to where pom.xml is located
-
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v1
         with:
@@ -34,15 +30,10 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           install_components: 'beta'
 
-      - name: Build Docker image and push to Artifact Registry
-        run: |
-          gcloud builds submit --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/pamten-backend \
-            pamtenproject-master  # 👈 Submitting correct project directory
-
-      - name: Deploy to Cloud Run
+      - name: Deploy to Cloud Run from source
         run: |
           gcloud run deploy pamten-backend \
-            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/pamten-backend \
+            --source pamtenproject-master \
             --platform managed \
             --region us-central1 \
             --allow-unauthenticated
