--- a/pamtenproject-master/src/main/resources/application.properties
+++ b/pamtenproject-master/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.application.name=pamtenproject
 
+# Multipart file upload configuration
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.file-size-threshold=2KB
+
 # Database Configuration
 spring.datasource.url=jdbc:sqlserver://ghtiouthinid.eastus.cloudapp.azure.com:14896;databaseName=Recruitment_Platform;encrypt=true;trustServerCertificate=true
 spring.datasource.username=dev-portal-admin
-spring.datasource.password=$Pam*rep@25
+spring.datasource.password=${DB_PASSWORD:$Pam*rep@25}
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # JPA Configuration
@@ -22,15 +28,21 @@ management.endpoint.health.show-details=always
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=vamshrihari.vh@gmail.com
-spring.mail.password=zsjbimiwqiowplfj
+spring.mail.password=${EMAIL_PASSWORD:zsjbimiwqiowplfj}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # JWT Configuration
-jwt.secret=your-secret-key-here-make-it-long-and-secure-in-production
+jwt.secret=${JWT_SECRET:your-very-long-and-secure-secret-key-at-least-256-bits-long-replace-this-in-production}
 jwt.expiration=86400000
+jwt.issuer=recruitedge
+jwt.audience=recruitedge-users
 
 logging.level.org.springframework.security=DEBUG
 
 # Server Configuration
 server.port=8080
+
+# GCS Configuration
+spring.cloud.gcp.project-id=recruitedge-resumes
+spring.cloud.gcp.credentials.location=classpath:recruitedge-resumes.json
