--- a/Pamten-Backend-main/pom.xml
+++ b/Pamten-Backend-main/pom.xml
@@ -118,6 +118,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <executions>
+                  <execution>
+                   <goals><goal>repackage</goal></goals>
+                  </execution>
+                </executions>
                 <configuration>
                     <annotationProcessorPaths>
                         <path>
